feat: add access to prolific respondant

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -337,6 +337,10 @@
     "timeRemaining": "{{time}} remaining",
     "forItem": "for this item",
     "noApplets": "No applets",
-    "noActivities": "No activities are available for you to complete right now"
+    "noActivities": "No activities are available for you to complete right now",
+    "prolific": {
+      "nocode": "An error occurred while retrieving the completion code. Please use the NOCODE policy in Prolific.",
+      "alreadyAnswered": "You have already answered to this activity. Please return to Prolific and submit your completion code."
+    }
   }
 }
