--- a/src/i18n/fr/translation.json
+++ b/src/i18n/fr/translation.json
@@ -356,6 +356,10 @@
     "timeRemaining": "{{time}} restantes",
     "forItem": "pour cet objet",
     "noApplets": "Pas d'applets",
-    "noActivities": "Aucune activité n'est disponible pour le moment"
+    "noActivities": "Aucune activité n'est disponible pour le moment",
+    "prolific": {
+      "nocode": "Une erreur s'est produite lors de la récupération du code de validation. Veuillez utiliser la politique NOCODE sur Prolific.",
+      "alreadyAnswered": "Vous avez déjà répondu à cette activité. Veuillez retourner sur Prolific et soumettre votre code de validation."
+    }
   }
 }
